# RDS

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Person.cpp  Person.hpp  README.md  Radio.cpp  Radio.hpp  format  main.cpp  makefile
.github/workflows/: build.yml  clang-format.yml
Style Guide/: Style Guide.md  main.cpp
UML Diagrams/: RDS UML Diagrams.xml
cmake/: doxygen.cmake
inc/: Activity_log.hpp  Manage.hpp  Person.hpp  Radio.hpp  Time_entry.hpp  Utility.hpp
src/: Activity_log.cpp  CMakeLists.txt  Manage.cpp  Person.cpp  Radio.cpp  Time_entry.cpp  Utility.cpp
